--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,47 +1,18 @@
 name: PublishSwift
 
 on:
-  push:
+    push:
     branches:
-      - main
+        - main
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+    build:
+        runs-on: ubuntu-latest
         
-      - name: Clone or pull repository
-        run: |
-          if [ -d "myBlog" ]; then
-            cd myBlog
-            git pull
-          else
-            git clone https://github.com/flyer2001/myBlog.git
-          fi
-      - name: clone or make publish
-        run: |
-          cd ..
-          if [ -d "Publish" ]; then
-            echo "Publish exist"
-          else
-            git clone https://github.com/flyer2001/Publish.git
-            cd Publish
-            make
-          fi
-      
-      - name: Run publish generate command
-        run: |
-          cd ../myBlog
-          publish generate
-      
-      - name: Print path to Output folder
-        run: echo $GITHUB_WORKSPACE
-
-      - name: Remove files in /var/www/popyvanov.ru/s
-        run: rm -rf /var/www/popyvanov.ru/s/*
-      
-      - name: Copy files from Output folder to /var/www/popyvanov.ru/s
-        run: cp -r ${{ github.workspace }}/Output/* /var/www/popyvanov.ru/s
+        steps:
+            - uses: actions/checkout@v3
+            - name: Run script file
+            run: |
+                chmod +x ./scripts/generate.sh
+                ./scripts/generate.sh
+            shell: bash
