--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,6 +13,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Run script file
+        working-directory: ./
         run: |
           chmod +x ./scripts/generate.sh
           ./scripts/generate.sh
