--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,7 +14,4 @@ jobs:
         uses: actions/checkout@v3
       - name: Run script file
         working-directory: ./
-        run: |
-          chmod +x ./scripts/generate.sh
-          ./scripts/generate.sh
-        shell: bash
+        run: echo ${{ github.workspace }}
