--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,4 +11,5 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        run: echo "$(dirname $(dirname $(dirname $(dirname $(dirname ${GITHUB_WORKSPACE})))))"
+
