--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,11 +6,19 @@ on:
       - main
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
-      - name: Navigate to parent directory
-        working-directory: '**/myBlog'
-        run: pwd
+    - name: SSH to server and execute commands
+      uses: appleboy/ssh-action@master
+      with:
+        host: localhost
+        username: root
+        password: ${{ secrets.SSH_PASSWORD }}
+        script: |
+          cd /myBlog
+          git pull
+          publish generate
+          exit
 
