--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,7 @@ jobs:
     - name: SSH to server and execute commands
       uses: appleboy/ssh-action@v1.0.0
       with:
-        host: localhost
+        host: popyvanov.ru
         username: root
         password: ${{ secrets.SSH_PASSWORD }}
         script: |
